--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-circle-slider": "^2.9.0",
+    "react-native-circular-slider": "^1.0.1",
+    "react-native-elements": "^3.4.2",
     "react-native-elements-universe": "0.0.0",
     "react-native-fieldset": "^1.0.2",
     "react-native-gesture-handler": "~1.10.2",
@@ -31,10 +34,12 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.6.4",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "rn-circular-slider": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
