--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.6.4",
     "react-redux": "^7.2.4",
-    "rn-circular-slider": "^1.1.0"
+    "rn-circular-slider": "^1.1.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
