--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "~0.63.4",
     "react-native-circle-slider": "^2.9.0",
     "react-native-circular-slider": "^1.0.1",
+    "react-native-dropdown-picker": "^5.1.21",
     "react-native-elements": "^3.4.2",
     "react-native-elements-universe": "0.0.0",
     "react-native-fieldset": "^1.0.2",
