--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
+    "react-native-system-navigation-bar": "^1.0.2",
     "react-native-tcp-socket": "^5.2.1",
     "react-native-tcp-socket-mroads": "^1.0.14",
     "react-native-unimodules": "~0.13.3",
