--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.0",
+    "@use-expo/brightness": "^2.0.0",
+    "@use-expo/permissions": "^2.0.0",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
+    "expo-brightness": "~9.1.2",
     "expo-file-system": "~11.0.2",
+    "expo-permissions": "~12.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
