--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-alert-pickers": "^1.3.1",
     "react-native-circle-slider": "^2.9.0",
     "react-native-circular-slider": "^1.0.1",
     "react-native-dropdown-picker": "^5.1.21",
